--- a/references.bib
+++ b/references.bib
@@ -349,6 +349,39 @@ doi = {10.1177/0956797609357751}
   publisher={American Psychological Association}
 }
 
+@article{calogero2004test,
+  title={A test of objectification theory: The effect of the male gaze on appearance concerns in college women},
+  author={Calogero, Rachel M},
+  journal={Psychology of Women Quarterly},
+  volume={28},
+  number={1},
+  pages={16--21},
+  year={2004},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{gervais2011you,
+  title={When what you see is what you get: The consequences of the objectifying gaze for women and men},
+  author={Gervais, Sarah J and Vescio, Theresa K and Allen, Jill},
+  journal={Psychology of Women Quarterly},
+  volume={35},
+  number={1},
+  pages={5--17},
+  year={2011},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{gay2010my,
+  title={My body or my mind: The impact of state and trait objectification on women's cognitive resources},
+  author={Gay, Robin K and Castano, Emanuele},
+  journal={European Journal of Social Psychology},
+  volume={40},
+  number={5},
+  pages={695--703},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
 @article{brunelletal2010, title={Dispositional authenticity and romantic relationship functioning}, volume={48}, DOI={10.1016/j.paid.2010.02.018}, number={8}, journal={Personality and Individual Differences}, author={Brunell, Amy B. and Kernis, Michael H. and Goldman, Brian M. and Heppner, Whitney and Davis, Patricia and Cascio, Edward V. and Webster, Gregory D.}, year={2010}, pages={900–905}}
 
 @book{young1979, title={Proceedings of The Second Sex—Thirty Years Later: A Commemorative Conference on Feminist Theory,}, author={Young, Iris Marion}, year={1979}}
