--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -11,7 +11,9 @@ author:
   - name          : "Kat Kyuchukova"
     affiliation   : "1"
   - name          : "Asha Hinson"
-    affiliation   : "1"    
+    affiliation   : "1"
+  - name          : "Lanee Jung"
+    affiliation   : "1"     
 
 affiliation:
   - id            : "1"
@@ -63,35 +65,26 @@ library(tidyverse)
 library(lavaan)
 library(xtable)
 ```
-
-
-OUTLINE
-  - Introduction: Objectification theory says stuff. Recently we've learned about interpersonal objectification but we only know it about mixed gender. We know women objectify each other, but what about in interpersonal interactions?
-  - Self-objectification
-    - SSO versus TSO
-    - Does this process of self-objectification also lead women to objectify other women?
-  - Women objectifying other women
-    - Lots of evidence, but we don't know if this happens interpersonally
-  - Interpersonal objectifcation research is a whole thing now, but there are no studies (or theoretical models) that include women-on-women interpersonal objectification processes.
-  - Relationships and objectification
-    - Both romantic relationships and relationships in general have been studies in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships.
-  - Authenticity paragraph?
-  - Current Study
-  - Alternative predictions
-  
     
 @robertsfredrickson Objectification Theory, suggests that women are objectified in interpersonal encounters, and that the effect might be strongest from men, but possibly also from women. Psychological researchers studying the sexual objectification of women, and the resulting self-objectification that follows, have in recent years explored the interpersonal process of the objectification - self-objectification link. For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men's reported objectification of their female interaction partner during an interaction was associated with increased self-objectification reported by their partner. @gervais2020social has reviewed the literature on interpersonal self-objectification and has organized the the process in a theoretical model called the SIMO, but this model is only relevant for mixed-gender encounters. Although there is ample evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there is currently no studies investigating the process of interpersonal objectification same-gender interactions. Does objectification by a female interaction partner have the same downstream negative consequences as being objectified by a male interaction partner? For example, perhaps women could be amplifying each others' self-objectification as they get ready to go out for the night, *before* the theoretical encounters with men outlined in @gervais2020social occur. 
 
+##Self-Objectification
 Self-objectification is a multidimensional process that accounts for the cognitive mechanism that translates experiences of sexualization at the cultural level to psychological (e.g., anxiety, self-esteem, authenticity, motivational states) and behavioral (cognitive performance, body monitoring) features of mental health and well-being at the individual level [@calogero2011; @moradi2008]. @calogero2011 proposes that the construct of self-objectification can be conceptualized as a learned trait. Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines, which can lead to a state of self-objectification [@calogero2011, @moradi2008]. Being objectified by another person and possessing trait-level self-objectification (TSO) may interact to influence experiences of feeling like a body, or state self-objectification (SSO) [CITE swimsuit sweater, @garcia2016objectification]. Does this habit self-objectification lead women to also objectify other women, possibly to compare oneself? 
 
+##Women Objectifying Women
 Some studies have found that women objectify other women to a greater extent than they objectify men [@loughnan2015exploring]. Women objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but we know next to nothing about interpersonal sexual objectification among women and what the immediate effects might be. Further, do women objectify non-sexualized women they are interacting with? What might be different for same-gender interactions? @harsey2020men found that self-objectification was related to the objectification of women to a similar degree for men and women participants, although men scored high than women on a measure of belief that objectification of women is natural for men. 
 
-SIMO model and literature review [@gervais2020social]. Studies have shown that within social encounters women are gazed at more than men [@briton1995, CITE saguy Skype study, calogero video walking study], often times feel ‘looked at’ within interpersonal interactions [@argyle1969], and will more than likely internalize the objectifying gaze on physical self [@young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredricksonetal1998]. We don't know about women-on-women interpersonal objectification. What might be different?
+##Interpersonal Objectification
+SIMO model and literature review [@gervais2020social]. Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969], and will more than likely internalize the objectifying gaze on physical self [@young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredricksonetal1998]. We don't know about women-on-women interpersonal objectification. What might be different?
 
-Self-objectification has been found to occur after a mere relationship prime among women [@sanchez2008romance] because in our culture women need to look attractive to obtain and maintain successful relationship, thus, the "college relationships condition may heighten self-objectification and the evaluation of other women in a sexualized way. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, and women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship and they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], less is known about first dates. But this literature is also only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [CITE PWQ paper I reviewed, Yoder editor]. Empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@quinnetal]. Thus, there is evidence that the expereince of state self-objectification in mixed-gender contexts (stranger and romantic) and within the self in any moment (trying on a swimsuit) has negative consequences, but what about in the context of interaction with other women?
+Self-objectification has been found to occur after a mere relationship prime among women [@sanchez2008romance] because in our culture women need to look attractive to obtain and maintain successful relationship, thus, the "college relationships condition may heighten self-objectification and the evaluation of other women in a sexualized way. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, and women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship and they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], less is known about first dates. But this literature is also only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [CITE PWQ paper I reviewed, Yoder editor]. Empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@quinnetal]. Both romantic relationships and relationships in general have been studies in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships. 
 
+There is evidence that the expereince of state self-objectification in mixed-gender contexts (stranger and romantic) and within the self in any moment (trying on a swimsuit) has negative consequences, but what about in the context of interaction with other women? Is the self-objectification expreience in mixed-gender interactions the same as that experienced in same-gender interactions? The ample research demonstrating that the male gaze has a particularly detrimental effect would suggest no [@saguyetal2010, @calogero2004test; @gervais2011you; @gay2010my]. Women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], but when they do it, does it lead to self-ibjectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that ineraction?  
+
+##Interpersonal Objectification and Authenticity
 There is some evidence that reduced authenticity is a consequence of self-objectification in the moment [@garcia2016objectification; again CITE PWQ paper I reviewed, Yoder editor]. This link has been justified by the lierature on stigmatized-stigmatizer interactions, viewing the experience of being objectified in an interaction as an identity threat situation. When a woman is objectified by a man, and then experiences self-objectification, this intergroup encounter might trigger identitiy threat, but is the same negative consequence present when a woman is objectified by another woman? woman-woman interpersonal objectification processes might diverge from this process. One the one hand, she may not be having the same negative consequences the cascade from situations that threated group-based identity [@deaux1987putting; @dovidio2006nonverbal; @hebl2005promoting], but feeling like a body, rather than a full human, in an interaction may be enough to reduce feelings of authenticity and social competnce, regardless of the gender of the objectifyer [@tolman2006looking; PWQ paper I reviewed, Yoder editor].
 
+##The Current Study
 In the current study, we sought to examine what occurs during an interaction in which one or both partners are objectifying each other, similarly to @garcia2016objectification,  but between same-sex female interpersonal interactions. Moreover, the current study uses a face-to-face interaction paradigm and dyadic data analysis techniques to examine the effects for both women simultaneously. We expected to replicate the results found in @garcia2016objectification. We predicted that being objectified by one’s interaction partner would lead to self-objectification, which in turn would lead to feelings of inauthenticity, then reduced feelings of agency in romantic relationships, reduced career aspiration, and reduced cognitive performance. Specifically, we expected to find a positive relationship between other-objectification by one's partner and state self-objectification. We also expect to find a negative relationship between self-state objectification and interaction authenticity, and that interaction authenticity will be positively related to cognitive performance, relationship agency, and career aspirations.
 
 @puvia2013being would alternatively predict that women's tendency to self-objectify (TSO) leads them to objectify other women (...well, dehumanize a sexualized woman, but also @strelan2005women would predict the TSO->SOO link and @harsey2020men too), and this is mediated by the woman's own state self-objectification (SSO). So we also tested this as a possible alternative model.
@@ -509,6 +502,12 @@ report_stats <- function(mod, est){
 All model estimates and p-values are found in Table\ \@ref(tab:mlm) and the relationships with estimates included are depicted in Figure\ \@ref(fig:semfigure). 
 
 ```{r}
+# apim0 <- gls(a2pSOO_A ~ TSO_A, 
+#                  na.action=na.omit, 
+#                  correlation=corCompSymm (form=~1|dyadID),
+#                  data=clarksmith_women)
+# summary(apim0)
+
 #SSO
 apim1 <- gls(howbody_avg_A ~ a2pSOO_A + a2pSOO_P + TSO_A + a2pSOO_P*TSO_A + smith_or_clark, 
                  na.action=na.omit, 
