--- a/references.bib
+++ b/references.bib
@@ -117,15 +117,15 @@
   publisher={Wiley Online Library}
 }
 
-@article{fredricksonetal1998,
-author = {L. Fredrickson, Barbara and Roberts, Tomi-Ann and M. Noll, Stephanie and Quinn, Diane and Twenge, Jean},
-year = {1998},
-month = {07},
-pages = {269-84},
-title = {That Swimsuit Becomes You: Sex Differences in Self-Objedification, Restrained Eating, and Math Performance},
-volume = {75},
-journal = {Journal of personality and social psychology},
-doi = {10.1037/0022-3514.75.1.269}
+@article{fredrickson1998swimsuit,
+  title={That swimsuit becomes you: sex differences in self-objectification, restrained eating, and math performance.},
+  author={Fredrickson, Barbara L and Roberts, Tomi-Ann and Noll, Stephanie M and Quinn, Diane M and Twenge, Jean M},
+  journal={Journal of personality and social psychology},
+  volume={75},
+  number={1},
+  pages={269},
+  year={1998},
+  publisher={American Psychological Association}
 }
 
 @article{nollfredrickson1998,
@@ -380,6 +380,39 @@ doi = {10.1177/0956797609357751}
   pages={695--703},
   year={2010},
   publisher={Wiley Online Library}
+}
+
+@article{kahalon2018don,
+  title={“Don’t Bother Your Pretty Little Head” Appearance Compliments Lead to Improved Mood but Impaired Cognitive Performance},
+  author={Kahalon, Rotem and Shnabel, Nurit and Becker, Julia C},
+  journal={Psychology of Women Quarterly},
+  volume={42},
+  number={2},
+  pages={136--150},
+  year={2018},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{szymanski2011sexual,
+  title={Sexual objectification of women: advances to theory and research 1$\psi$7},
+  author={Szymanski, Dawn M and Moffitt, Lauren B and Carr, Erika R},
+  journal={The Counseling Psychologist},
+  volume={39},
+  number={1},
+  pages={6--38},
+  year={2011},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{miles2015stop,
+  title={“Stop looking at me!” Interpersonal sexual objectification as a source of insidious trauma},
+  author={Miles-McLean, Haley and Liss, Miriam and Erchull, Mindy J and Robertson, Caitlin M and Hagerman, Charlotte and Gnoleba, Michelle A and Papp, Leanna J},
+  journal={Psychology of Women Quarterly},
+  volume={39},
+  number={3},
+  pages={363--374},
+  year={2015},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
 
 @article{brunelletal2010, title={Dispositional authenticity and romantic relationship functioning}, volume={48}, DOI={10.1016/j.paid.2010.02.018}, number={8}, journal={Personality and Individual Differences}, author={Brunell, Amy B. and Kernis, Michael H. and Goldman, Brian M. and Heppner, Whitney and Davis, Patricia and Cascio, Edward V. and Webster, Gregory D.}, year={2010}, pages={900–905}}
