--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -69,13 +69,13 @@ library(xtable)
 @robertsfredrickson Objectification Theory, suggests that women are objectified in interpersonal encounters, and that the effect might be strongest from men, but possibly also from women. Psychological researchers studying the sexual objectification of women, and the resulting self-objectification that follows, have in recent years explored the interpersonal process of the objectification - self-objectification link. For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men's reported objectification of their female interaction partner during an interaction was associated with increased self-objectification reported by their partner. @gervais2020social has reviewed the literature on interpersonal self-objectification and has organized the the process in a theoretical model called the SIMO, but this model is only relevant for mixed-gender encounters. Although there is ample evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there is currently no studies investigating the process of interpersonal objectification same-gender interactions. Does objectification by a female interaction partner have the same downstream negative consequences as being objectified by a male interaction partner? For example, perhaps women could be amplifying each others' self-objectification as they get ready to go out for the night, *before* the theoretical encounters with men outlined in @gervais2020social occur. 
 
 ##Self-Objectification
-Self-objectification is a multidimensional process that accounts for the cognitive mechanism that translates experiences of sexualization at the cultural level to psychological (e.g., anxiety, self-esteem, authenticity, motivational states) and behavioral (cognitive performance, body monitoring) features of mental health and well-being at the individual level [@calogero2011; @moradi2008]. @calogero2011 proposes that the construct of self-objectification can be conceptualized as a learned trait. Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines, which can lead to a state of self-objectification [@calogero2011, @moradi2008]. Being objectified by another person and possessing trait-level self-objectification (TSO) may interact to influence experiences of feeling like a body, or state self-objectification (SSO) [@fredrickson1998swimsuit, @garcia2016objectification]. Does this habit self-objectification lead women to also objectify other women, possibly to compare oneself? 
+Self-objectification is a multidimensional process that accounts for the cognitive mechanism that translates experiences of sexualization at the cultural level [@loughnan2015exploring] to psychological (e.g., anxiety, self-esteem, authenticity, motivational states) and behavioral (cognitive performance, body monitoring) features of mental health and well-being at the individual level [@calogero2011; @moradi2008]. @calogero2011 proposes that the construct of self-objectification can be conceptualized as a learned trait. Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines, which can lead to a state of self-objectification [@bernard2018bodies; @calogero2011; @moradi2008]. Being objectified by another person and possessing trait-level self-objectification (TSO) may interact to influence experiences of feeling like a body, or state self-objectification (SSO) [@fredrickson1998swimsuit, @garcia2016objectification]. Does this habit self-objectification lead women to also objectify other women, possibly to compare oneself? 
 
 ##Women Objectifying Women
 Some studies have found that women objectify other women to a greater extent than they objectify men [@loughnan2015exploring]. Women objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but we know next to nothing about interpersonal sexual objectification among women and what the immediate effects might be. Further, do women objectify non-sexualized women they are interacting with? What might be different for same-gender interactions? @harsey2020men found that self-objectification was related to the objectification of women to a similar degree for men and women participants, although men scored high than women on a measure of belief that objectification of women is natural for men. 
 
 ##Interpersonal Objectification
-SIMO model and literature review [@gervais2020social]. Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and will more than likely internalize the objectifying gaze on physical self [@young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredricksonetal1998]. We don't know about women-on-women interpersonal objectification. What might be different?
+SIMO model and literature review [@gervais2020social]. Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and will more than likely internalize the objectifying gaze on physical self [@puvia2013being; @young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredricksonetal1998]. We don't know about women-on-women interpersonal objectification. What might be different?
 
 Self-objectification has been found to occur after a mere relationship prime among women [@sanchez2008romance] because in our culture women need to look attractive to obtain and maintain successful relationship, thus, the "college relationships condition may heighten self-objectification and the evaluation of other women in a sexualized way. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, and women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship and they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], less is known about first dates. But this literature is also only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [CITE PWQ paper I reviewed, Yoder editor]. Empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. Both romantic relationships and relationships in general have been studies in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships.
 
