--- a/references.bib
+++ b/references.bib
@@ -341,6 +341,17 @@ doi = {10.1177/0956797609357751}
   pages={83}
 }
 
+@article{bernard2018bodies,
+  title={From bodies to blame: Exposure to sexually objectifying media increases tolerance toward sexual harassment.},
+  author={Bernard, Philippe and Legrand, Sabine and Klein, Olivier},
+  journal={Psychology of Popular Media Culture},
+  volume={7},
+  number={2},
+  pages={99},
+  year={2018},
+  publisher={Educational Publishing Foundation}
+}
+
 
 @book{calogero2011,
   title={Self-objectification in women: Causes, consequences, and counteractions.},
@@ -413,6 +424,17 @@ doi = {10.1177/0956797609357751}
   pages={363--374},
   year={2015},
   publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{puvia2013being,
+  title={Being a body: Women’s appearance related self-views and their dehumanization of sexually objectified female targets},
+  author={Puvia, Elisa and Vaes, Jeroen},
+  journal={Sex roles},
+  volume={68},
+  number={7-8},
+  pages={484--495},
+  year={2013},
+  publisher={Springer}
 }
 
 @article{brunelletal2010, title={Dispositional authenticity and romantic relationship functioning}, volume={48}, DOI={10.1016/j.paid.2010.02.018}, number={8}, journal={Personality and Individual Differences}, author={Brunell, Amy B. and Kernis, Michael H. and Goldman, Brian M. and Heppner, Whitney and Davis, Patricia and Cascio, Edward V. and Webster, Gregory D.}, year={2010}, pages={900–905}}
